app/src/test/resources/programs/invalid/identifiers/functions.exe
foo main() -> Int = 0;

// Function name cannot start with upper case letter.
foo Incorrect() -> Nope = ();

// Function name is verified even if argument name is correct.
foo IncorrectWithArgument(arg: Bool) -> Nope = ();

// Argument name is verified even if function name is correct.
foo argument(Arg: Int) -> Int = 4;

// Incorrect name is found even if rest is good.
foo oneOfArguments(arg1: Bool, arg2: Int, Arg3: Bool) -> Bool = true;

// Function name cannot start with number.
foo 123numberedFunction(arg: Int) -> Int = 3;

// Argument name cannot start with number.
foo numberedArgument(123arg: Int) -> Int = 5;

// Neither function nor argument name can start with an underscore.
foo _underscored_function(_arg: Bool) -> Nope = ();
